# panorama

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  config.h.in  snapcraft.yaml
cmake/: GeneratePanoramaVersion.cmake
desktop/: panorama.desktop
imgui/: imgui.ini
include/: AboutDialog.h  CPUInformation.h  CPUPane.h  CPUUsage.h  FontDefinitions.h  Globals.h  MainWindow.h  MeasurementUnit.h  MemoryInfo.h  MemoryInfoPane.h  MemoryUnits.h  PlotColorsArray.h  ProcessList.h  ProcessListPane.h  ProcessUtils.h  SampleRates.h  SettingsDialog.h  Sidebar.h  Theming.h  Utils.h  Window.h
include/GL/: gl3w.h
snap/: panorama.desktop  snapcraft.yaml
src/: AboutDialog.cpp  CMakeLists.txt  CPUInformation.cpp  CPUPane.cpp  CPUUsage.cpp  MainWindow.cpp  MeasurementUnit.cpp  MemoryInfo.cpp  MemoryInfoPane.cpp  PlotColorsArray.cpp  ProcessList.cpp  ProcessListPane.cpp  ProcessUtils.cpp  SettingsDialog.cpp  Sidebar.cpp  Theming.cpp  Utils.cpp  Window.cpp  gl3w.c  panorama-snap-launch  panorama.cpp
